2013-Sep-18 weaver	Tag V07-00-02.  Derived from psddldata tag V00-04-35.  Moved xtc/SrcAlias to psddl/alias.ddl.h.
2013-Sep-16 weaver	Tag V07-00-01.  Derived from psddldata tag V00-04-33.
2012-Dec-21 caf         Added Timepix Config V3.
2012-Apr-03 tomytsai    Added Ocean Optics spectrometer and EpicsConfig
2012-Jan-05 caf         Added Timepix detector.
2011-Nov-08 caf     Tag V03-00-01   Modified some data types for portability.
2011-Nov-02 caf     Tag V03-00-00.
2011-Oct-03 caf         Added Gsc16ai detector.
2011-Sep-27 caf         New xtcmodify feature: "-s <selectpayloadname>" requests one payoad name
          to be written to output file.
2011-Sep-26 jackp     Added Fexamp detector
2011-Sep-07 weaver  Tag V02-13-09   XtcMonitorClient retries all message queue opens - removed race with XtcMonitorServer.
          Added Cspad2x2.
2011-Aug-09 weaver      Added BldDataPimV1.
2011-July-20  weaver  Tag V02-12-00 Added XRT BLD cameras.
2011-May-31 weaver  Tag V02-11-01 Added BldDataEbeamV2.
2011-May-12 weaver      Added Lusi Config V2s to match Ipimb upgrade.
2011-Apr-04 weaver      Added postmarks to mq_send calls from XtcMonitorServer to allow
          recovery of shared memory buffers lost to non-responsive clients.
2010-Dec-17 weaver  Tag V02-10-02 Added new acqiris/Tdc data types.
2010-Dec-09 tomy    Modified xtc/Detinfo.hh and xtc/src/DetInfo.cc to add CXI detector IDs.
2010-Nov-30 weaver  Tag V02-10-00.  Added evr/ConfigV5 and evr/SequencerConfigV1.
2010-Nov-02     caf     Tag V02-08-05.
2010-Sep-20 weaver  Tag V02-08-00.  Added Cspad ElementIterator and Config/ElementV2.
2010-Sep-1  weaver  Tag V02-07-00.  Cspad definitions are stable now.
2010-Aug-10 weaver  Tag V02-06-00.  Added LUSI diagnostic FEX data and config types.
2010-Jun-24 weaver      Added Cspad preliminary definitions.
2010-Jun-15 weaver  Tag V02-04-00.  Added value method to encoder/DataV1.  Added pulnix/TM6740ConfigV2, fccd/FccdConfigV2.